hphp/hack/test/typecheck/global_const9.php.exp
File "global_const9.php", line 3, characters 11-15:
Invalid expression in constant initializer (Parsing[1002])
