hphp/hack/test/typecheck/global_const9.php
<?hh // partial

const X = $x[9];
